--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,16 @@ name = "cacca"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "cacca_text"
+path = "src/bin/cacca_text.rs"
+
+[[bin]]
+name = "cacca_graph"
+path = "src/bin/cacca_graph.rs"
+
 [dependencies]
+chrono = "0.4.38"
 csv = "1.3.0"
+plotters = "0.3.6"
 regex = "1.10.6"
