--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ path = "src/bin/cacca_graph.rs"
 [dependencies]
 chrono = "0.4.38"
 csv = "1.3.0"
+image = "0.25.2"
 plotters = "0.3.6"
 regex = "1.10.6"
